--- a/train32.ipynb
+++ b/train32.ipynb
@@ -22,10 +22,12 @@
         "import matplotlib.pyplot as plt\n",
         "import random\n",
         "\n",
+        "import keras\n",
+        "\n",
         "# from tensorflow.keras.applications.resnet50 import ResNet50, preprocess_input\n",
-        "from tensorflow.keras import Sequential\n",
-        "from tensorflow.keras import layers\n",
-        "from tensorflow.keras.utils import image_dataset_from_directory\n",
+        "from keras import Sequential\n",
+        "from keras import layers\n",
+        "from keras.utils import image_dataset_from_directory\n",
         "from Resnet50 import ResNet50"
       ]
     },
@@ -82,17 +84,17 @@
       "source": [
         "IMG_SIZE = 32\n",
         "\n",
-        "data_augmentation = tf.keras.Sequential([\n",
-        "  layers.RandomFlip(\"horizontal\"),\n",
-        "  layers.RandomBrightness(0.2),\n",
-        "  layers.RandomTranslation(0.1,0.3),\n",
-        "  layers.RandomRotation(0.2)\n",
+        "data_augmentation = keras.Sequential([\n",
+        "    keras.layers.RandomFlip(\"horizontal\"),\n",
+        "    keras.layers.RandomBrightness(0.2),\n",
+        "    keras.layers.RandomTranslation(0.1,0.3),\n",
+        "    keras.layers.RandomRotation(0.2)\n",
         "])\n",
         "\n",
         "resize_and_rescale = Sequential([\n",
-        "  layers.Resizing(IMG_SIZE, IMG_SIZE),\n",
-        "  layers.Rescaling(1./255),\n",
-        "  # layers.Normalization(axis=1, mean=0, variance=1)\n",
+        "    keras.layers.Resizing(IMG_SIZE, IMG_SIZE),\n",
+        "    keras.layers.Rescaling(1./255),\n",
+        "    # layers.Normalization(axis=1, mean=0, variance=1)\n",
         "])\n",
         "\n",
         "final_train_ds = train_ds\n",
@@ -568,8 +570,8 @@
         "model = ResNet50((IMG_SIZE,IMG_SIZE,3), len(classes))   \n",
         "\n",
         "\n",
-        "model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=0.0001),\n",
-        "              loss=tf.keras.losses.CategoricalCrossentropy(),\n",
+        "model.compile(optimizer = keras.optimizers.Adam(learning_rate=0.0001),\n",
+        "              loss = keras.losses.CategoricalCrossentropy(),\n",
         "              metrics=['accuracy'])\n",
         "\n",
         "model.summary()"
