--- a/train_siamese.ipynb
+++ b/train_siamese.ipynb
@@ -22,6 +22,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "w-4HTJanDP40"
+      },
+      "outputs": [],
       "source": [
         "def create_ds(i):\n",
         "  positive_train_1 = create_image_path_ds(f'./lfw/lists/0{i}_train_same.txt','./lfw/faces_png/')\n",
@@ -43,12 +48,7 @@
         "# build_txt('diff', './train_diff.txt', 4000)\n",
         "# build_txt('same', './test_same.txt', 1000)\n",
         "# build_txt('diff', './test_diff.txt', 1000)\n"
-      ],
-      "metadata": {
-        "id": "w-4HTJanDP40"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -58,7 +58,7 @@
       },
       "outputs": [],
       "source": [
-        "train_ds, val_ds = create_ds_ds()\n",
+        "train_ds, val_ds = create_ds(1)\n",
         "for i in range(2, 10):\n",
         "  train_ds_1, val_ds_1 = create_ds(i)\n",
         "  train_ds = train_ds.concatenate(train_ds_1)\n",
@@ -67,15 +67,15 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "for i,j,k in train_ds.take(1):\n",
-        "  print(i,j,k)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "S9wudmPXIKJe"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "for i,j,k in train_ds.take(1):\n",
+        "  print(i,j,k)"
+      ]
     },
     {
       "cell_type": "code",
@@ -100,15 +100,14 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "G2GlkJyiNzwD",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "G2GlkJyiNzwD",
         "outputId": "af6e3736-8987-4fec-e0ea-073ee1c99b98"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "(TensorSpec(shape=(224, 224, 3), dtype=tf.float32, name=None),\n",
@@ -116,8 +115,9 @@
               " TensorSpec(shape=(), dtype=tf.float32, name=None))"
             ]
           },
+          "execution_count": 6,
           "metadata": {},
-          "execution_count": 6
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -209,16 +209,16 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "L3WVlEe0NzwE",
-        "outputId": "c8da6864-ff59-45ca-ddca-5178cf307080",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "L3WVlEe0NzwE",
+        "outputId": "c8da6864-ff59-45ca-ddca-5178cf307080"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Model: \"model\"\n",
             "__________________________________________________________________________________________________\n",
@@ -316,14 +316,14 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# checkpoint.restore(tf.train.latest_checkpoint('/tmp/training_checkpoints_lfw'))"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Piwt2PNQdHOm"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# checkpoint.restore(tf.train.latest_checkpoint('/tmp/training_checkpoints_lfw'))"
+      ]
     },
     {
       "cell_type": "code",
@@ -352,28 +352,33 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "model.save('siamese_1M_2.keras')"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "1bY0rXhVHCzi"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "model.save('siamese_1M_2.keras')"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# model = tf.keras.models.load_model('siamese_1M_2.keras')"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "nh2GPLexrlxV"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# model = tf.keras.models.load_model('siamese_1M_2.keras')"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Dmrek_2FZYT9"
+      },
+      "outputs": [],
       "source": [
         "img_a = preprocess_image('./WIN_20231231_04_09_40_Pro.jpg',(IMG_SIZE, IMG_SIZE))\n",
         "img_b = preprocess_image('./WIN_20231231_03_50_45_Pro.jpg',(IMG_SIZE, IMG_SIZE))\n",
@@ -401,15 +406,15 @@
         "#       print(f'different')\n",
         "print(model.predict([i_b, i_a]))\n",
         "print(model.predict([i_a, i_c]))"
-      ],
-      "metadata": {
-        "id": "Dmrek_2FZYT9"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "name": "python3"
@@ -425,12 +430,7 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.10.12"
-    },
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4"
-    },
-    "accelerator": "GPU"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
