--- a/train_siamese.ipynb
+++ b/train_siamese.ipynb
@@ -215,36 +215,7 @@
         "id": "L3WVlEe0NzwE",
         "outputId": "c8da6864-ff59-45ca-ddca-5178cf307080"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Model: \"model\"\n",
-            "__________________________________________________________________________________________________\n",
-            " Layer (type)                Output Shape                 Param #   Connected to                  \n",
-            "==================================================================================================\n",
-            " anchor_input (InputLayer)   [(None, 224, 224, 3)]        0         []                            \n",
-            "                                                                                                  \n",
-            " validation_input (InputLay  [(None, 224, 224, 3)]        0         []                            \n",
-            " er)                                                                                              \n",
-            "                                                                                                  \n",
-            " sequential (Sequential)     (None, 128)                  2891776   ['anchor_input[0][0]',        \n",
-            "                                                          0          'validation_input[0][0]']    \n",
-            "                                                                                                  \n",
-            " l1_dist (L1Dist)            (None, 128)                  0         ['sequential[0][0]',          \n",
-            "                                                                     'sequential[1][0]']          \n",
-            "                                                                                                  \n",
-            " fc (Dense)                  (None, 1)                    129       ['l1_dist[0][0]']             \n",
-            "                                                                                                  \n",
-            "==================================================================================================\n",
-            "Total params: 28917889 (110.31 MB)\n",
-            "Trainable params: 5320705 (20.30 MB)\n",
-            "Non-trainable params: 23597184 (90.02 MB)\n",
-            "__________________________________________________________________________________________________\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "anchor_input = layers.Input(shape=(224,224,3), name='anchor_input')\n",
         "validation_input = layers.Input(shape=(224,224,3), name='validation_input')\n",
@@ -253,7 +224,7 @@
         "l1_layer = L1Dist(name='l1_distance')\n",
         "distances = l1_layer(embedding(anchor_input), embedding(validation_input))\n",
         "\n",
-        "model = Model(inputs=[anchor_input, validation_input], outputs=output_layer)\n",
+        "model = Model(inputs=[anchor_input, validation_input], outputs=distances)\n",
         "model.summary()"
       ]
     },
