--- a/train_siamese.ipynb
+++ b/train_siamese.ipynb
@@ -12,10 +12,10 @@
         "import tensorflow as tf\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "from tensorflow.keras.initializers import glorot_uniform\n",
-        "from tensorflow.keras.applications.resnet50 import ResNet50, preprocess_input\n",
-        "from tensorflow.keras import layers\n",
-        "from tensorflow.keras import Sequential\n",
+        "from keras.initializers import glorot_uniform\n",
+        "from keras.applications.resnet50 import ResNet50, preprocess_input\n",
+        "from keras import layers\n",
+        "from keras import Sequential\n",
         "from dataset import create_image_path_ds, preprocess_image\n",
         "from OneM_tripless import build_txt\n"
       ]
@@ -157,7 +157,7 @@
       },
       "outputs": [],
       "source": [
-        "from tensorflow.keras.models import Model\n",
+        "from keras.models import Model\n",
         "\n",
         "res50 = ResNet50(\n",
         "    include_top=True,\n",
@@ -167,26 +167,20 @@
         "    pooling='avg',\n",
         "    classes=1000\n",
         ")\n",
+        "\n",
         "for layer in res50.layers:\n",
         "    layer.trainable = False\n",
         "embedding = Sequential([\n",
-        "    Model(inputs=res50.input, outputs=res50.layers[-2].output, name='res50_extractor'),\n",
-        "    layers.Flatten(),\n",
-        "    layers.Dense(2048, activation='relu', name='fc_rd0'),\n",
-        "    layers.BatchNormalization(name='fc_db_rd1'),\n",
-        "    layers.Dense(512, activation='sigmoid', name='fc_rd1'),\n",
-        "    layers.BatchNormalization(name='fc_db_rd2'),\n",
-        "    layers.Dense(128, activation='sigmoid', name='fc_rd2'),\n",
-        "    layers.LayerNormalization(name='fc_db_rd3', axis=1),\n",
-        "])\n",
-        "embedding.summary()\n",
-        "\n",
-        "\n",
-        "# model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=0.001),\n",
-        "#               loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
-        "#               metrics=['accuracy'])\n",
-        "\n",
-        "# model.summary()"
+        "        Model(inputs=res50.input, outputs=res50.layers[-2].output, name='res50_extractor'),\n",
+        "        layers.Flatten(),\n",
+        "        layers.Dense(2048, activation='relu', name='fc_rd0'),\n",
+        "        layers.BatchNormalization(name='fc_db_rd1'),\n",
+        "        layers.Dense(512, activation='sigmoid', name='fc_rd1'),\n",
+        "        layers.BatchNormalization(name='fc_db_rd2'),\n",
+        "        layers.Dense(128, activation='sigmoid', name='fc_rd2'),\n",
+        "        layers.LayerNormalization(name='fc_db_rd3', axis=1),\n",
+        "    ])\n",
+        "embedding.summary()"
       ]
     },
     {
@@ -232,50 +226,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Z4krtJLrNzwE"
-      },
-      "outputs": [],
-      "source": [
-        "# opt = tf.keras.optimizers.Adam(learning_rate=0.0001)\n",
-        "# opt = tf.keras.optimizers.RMSprop()\n",
-        "# binary_cross_loss = tf.keras.losses.BinaryCrossentropy()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "U8TCzllTNzwE"
-      },
-      "outputs": [],
-      "source": [
-        "# @tf.function\n",
-        "# def train_step(batch):\n",
-        "#     with tf.GradientTape() as tape:\n",
-        "#         X = batch[:2]\n",
-        "#         y = batch[2]\n",
-        "\n",
-        "#         yhat = model(X, training=True)\n",
-        "#         loss = binary_cross_loss(y, yhat)\n",
-        "#         print(loss)\n",
-        "#     grad = tape.gradient(loss, model.trainable_variables)\n",
-        "#     opt.apply_gradients(zip(grad, model.trainable_variables))\n",
-        "#     return loss\n",
-        "\n",
-        "# def train(data, epochs):\n",
-        "#     for epoch in range(1, epochs + 1):\n",
-        "#         print(f\"\\n {epoch}/{epochs}\")\n",
-        "#         progbar = tf.keras.utils.Progbar(len(data))\n",
-        "\n",
-        "#         for idx, batch in enumerate(data):\n",
-        "#             train_step(batch)\n",
-        "#             progbar.update(idx+1)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
         "id": "dJfncGyzNzwE"
       },
       "outputs": [],
@@ -283,17 +233,6 @@
         "model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=0.0001),\n",
         "              loss=tf.keras.losses.BinaryCrossentropy(from_logits=True),\n",
         "              metrics=['accuracy'])"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "Piwt2PNQdHOm"
-      },
-      "outputs": [],
-      "source": [
-        "# checkpoint.restore(tf.train.latest_checkpoint('/tmp/training_checkpoints_lfw'))"
       ]
     },
     {
@@ -336,17 +275,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "nh2GPLexrlxV"
-      },
-      "outputs": [],
-      "source": [
-        "# model = tf.keras.models.load_model('siamese_1M_2.keras')"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
         "id": "Dmrek_2FZYT9"
       },
       "outputs": [],
@@ -369,12 +297,6 @@
         "plt.imshow(img_c)\n",
         "plt.show()\n",
         "\n",
-        "# for i in [i_a, i_b, i_c, i_d]:\n",
-        "#   for j in [i_a, i_b, i_c, i_d]:\n",
-        "#     if(model.predict([i, j]) > 0.51):\n",
-        "#       print(f'same')\n",
-        "#     else:\n",
-        "#       print(f'different')\n",
         "print(model.predict([i_b, i_a]))\n",
         "print(model.predict([i_a, i_c]))"
       ]
