--- a/train_siamese.ipynb
+++ b/train_siamese.ipynb
@@ -12,6 +12,8 @@
         "import tensorflow as tf\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
+        "import keras\n",
+        "\n",
         "from keras.initializers import glorot_uniform\n",
         "from keras.applications.resnet50 import ResNet50, preprocess_input\n",
         "from keras import layers\n",
@@ -170,17 +172,20 @@
         "\n",
         "for layer in res50.layers:\n",
         "    layer.trainable = False\n",
-        "embedding = Sequential([\n",
-        "        Model(inputs=res50.input, outputs=res50.layers[-2].output, name='res50_extractor'),\n",
-        "        layers.Flatten(),\n",
-        "        layers.Dense(2048, activation='relu', name='fc_rd0'),\n",
-        "        layers.BatchNormalization(name='fc_db_rd1'),\n",
-        "        layers.Dense(512, activation='sigmoid', name='fc_rd1'),\n",
-        "        layers.BatchNormalization(name='fc_db_rd2'),\n",
-        "        layers.Dense(128, activation='sigmoid', name='fc_rd2'),\n",
-        "        layers.LayerNormalization(name='fc_db_rd3', axis=1),\n",
-        "    ])\n",
-        "embedding.summary()"
+        "    \n",
+        "embedding_model = keras.Sequential(\n",
+        "        [\n",
+        "            Model(inputs=res50.input, outputs=res50.layers[-2].output, name='res50_extractor'),\n",
+        "            keras.layers.Flatten(),\n",
+        "            keras.layers.Dense(2048, activation='relu', name='fc_rd0'),\n",
+        "            keras.layers.BatchNormalization(name='fc_db_rd1'),\n",
+        "            keras.layers.Dense(512, activation='sigmoid', name='fc_rd1'),\n",
+        "            keras.layers.BatchNormalization(name='fc_db_rd2'),\n",
+        "            keras.layers.Dense(128, activation='sigmoid', name='fc_rd2'),\n",
+        "            keras.layers.LayerNormalization(name='fc_db_rd3', axis=1),\n",
+        "        ]\n",
+        "    )\n",
+        "embedding_model.summary()"
       ]
     },
     {
@@ -216,10 +221,54 @@
         "\n",
         "\n",
         "l1_layer = L1Dist(name='l1_distance')\n",
-        "distances = l1_layer(embedding(anchor_input), embedding(validation_input))\n",
+        "distances = l1_layer(embedding_model(anchor_input), embedding_model(validation_input))\n",
         "\n",
         "model = Model(inputs=[anchor_input, validation_input], outputs=distances)\n",
         "model.summary()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Z4krtJLrNzwE"
+      },
+      "outputs": [],
+      "source": [
+        "# opt = tf.keras.optimizers.Adam(learning_rate=0.0001)\n",
+        "# opt = tf.keras.optimizers.RMSprop()\n",
+        "# binary_cross_loss = tf.keras.losses.BinaryCrossentropy()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "U8TCzllTNzwE"
+      },
+      "outputs": [],
+      "source": [
+        "# @tf.function\n",
+        "# def train_step(batch):\n",
+        "#     with tf.GradientTape() as tape:\n",
+        "#         X = batch[:2]\n",
+        "#         y = batch[2]\n",
+        "\n",
+        "#         yhat = model(X, training=True)\n",
+        "#         loss = binary_cross_loss(y, yhat)\n",
+        "#         print(loss)\n",
+        "#     grad = tape.gradient(loss, model.trainable_variables)\n",
+        "#     opt.apply_gradients(zip(grad, model.trainable_variables))\n",
+        "#     return loss\n",
+        "\n",
+        "# def train(data, epochs):\n",
+        "#     for epoch in range(1, epochs + 1):\n",
+        "#         print(f\"\\n {epoch}/{epochs}\")\n",
+        "#         progbar = tf.keras.utils.Progbar(len(data))\n",
+        "\n",
+        "#         for idx, batch in enumerate(data):\n",
+        "#             train_step(batch)\n",
+        "#             progbar.update(idx+1)"
       ]
     },
     {
@@ -239,13 +288,23 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "id": "Piwt2PNQdHOm"
+      },
+      "outputs": [],
+      "source": [
+        "# checkpoint.restore(tf.train.latest_checkpoint('/tmp/training_checkpoints_lfw'))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
         "id": "XgAhiO3iNzwE"
       },
       "outputs": [],
       "source": [
         "import gc\n",
         "epochs = 5\n",
-        "# train(train_ds, epochs)\n",
         "checkpoint = tf.train.Checkpoint(model)\n",
         "\n",
         "for i in range(10):\n",
@@ -269,6 +328,17 @@
       "outputs": [],
       "source": [
         "model.save('siamese_1M_2.keras')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "nh2GPLexrlxV"
+      },
+      "outputs": [],
+      "source": [
+        "# model = tf.keras.models.load_model('siamese_1M_2.keras')"
       ]
     },
     {
